@@ -12,7 +12,7 @@
     <name>CrumbMMO</name>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -30,7 +30,7 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
-                            <outputFile>/home/crumbed/TestServer_1_20/plugins/CrumbMMO.jar</outputFile>
+                            <outputFile>/Users/crumbed/TestServer_1_20/plugins/CrumbMMO.jar</outputFile>
                         </configuration>
                     </execution>
                 </executions>
@@ -56,8 +56,9 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
